<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="20dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_cancel"
                    android:contentDescription="@string/submit" />

                <TextView
                    android:id="@+id/notificationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:textSize="30dp"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:text="@string/are_you_sure"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/yes_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:paddingStart="50dp"
                    android:paddingEnd="50dp"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:textColor="@color/colorAccent"
                    android:background="@drawable/yes_btn_bg"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

</RelativeLayout>